# Online2DIrregularBPP

./: .gitignore  README.md  Requirements.md
datasets/: SG1.csv  SG2.csv  SG3.csv  SG4.csv  SG5.csv  SG6.csv  SG7.csv  _infos.txt  albano.csv  marques.csv  shapes.csv  swim.csv
datasets/NestFab/: SG1.dxf  SG2.dxf  SG3.dxf  SG4.dxf  SG5.dxf  SG6.dxf  SG7.dxf  albano.dxf  dighe1.dxf  dighe2.dxf  marques.dxf  shapes.dxf  swim.dxf
datasets/dataset_xml/: polygon0.dxf  polygon1.dxf  polygon2.dxf  polygon3.dxf  polygon4.dxf  polygon5.dxf  polygon6.dxf  polygon7.dxf  polygon8.dxf  pro_xml.py
datasets/sorted/: SG1_sorted.csv  SG2_sorted.csv  SG3_sorted.csv  SG4_sorted.csv  SG5_sorted.csv  SG6_sorted.csv  SG7_sorted.csv  albano_sorted.csv  dighe1_sorted.csv  dighe2_sorted.csv  marques_sorted.csv  shapes_sorted.csv  swim_sorted.csv
results/: _infos.txt  my_own_old.txt
results/Dalsoo/: Dalsoo.txt
results/Daniel_and_Filip/: Daniel.txt  Filip.txt
results/DeepNest/: DeepNest.txt
results/NestFab/: NestFab.txt
results/Packaide/: Packaide.txt
results/PowerNest/: PowerNest.txt
results/SvandaOndrej/: SvandaOndrej.txt
results/_Comparison_with_larger_containers/: surround_waste_plus_11.txt  (+12 more)
source/: damians_implementation.py  drawing.py  generator_placer_base.py  geometry_tools.py  parse_and_save_datasets.py  run_tests.py  shape_generators.py
source/nfp_interface/: CMakeLists.txt  build.bat  geometry.hpp  libnfporb.hpp  libnfporb_interface.cpp  libnfporb_interface.pyd_rescue  libnfporb_interface_rescue.pyd
source/nfp_interface/algo/: search_start.hpp  slide.hpp
(+20 files in other folders)
